lesson3/k8s/traffic-routing/canary/authors-10-v2__90-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
    - authors
  http:
    - route:
        - destination:
            host: authors
            subset: v1
          weight: 90
        - destination:
            host: authors
            subset: v2
          weight: 10
