lesson3/k8s/traffic-routing/canary/authors-100-v2__0-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  namespace: istio-course
spec:
  hosts:
    - authors
  http:
    - route:
        - destination:
            host: authors
            subset: v1
          weight: 0
        - destination:
            host: authors
            subset: v2
          weight: 100
