lesson3/k8s/traffic-routing/canary/books-10-v2__90-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
  namespace: istio-course
spec:
  hosts:
    - books
  http:
    - route:
        - destination:
            host: books
            subset: v1
          weight: 90
        - destination:
            host: books
            subset: v2
          weight: 10
