lesson3/k8s/traffic-routing/canary/books-100-v2__0-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
  namespace: istio-course
spec:
  hosts:
    - books
  http:
    - route:
        - destination:
            host: books
            subset: v1
          weight: 0
        - destination:
            host: books
            subset: v2
          weight: 100
